quickstart/aspnet-core/k8s/aspnet-core-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aspnet-core-app
  name: aspnet-core-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aspnet-core-app
  template:
    metadata:
      labels:
        app: aspnet-core-app
    spec:
      containers:
        - image: quay.io/kskels/aspnet-core-app:latest
          imagePullPolicy: Always
          name: aspnet-core-app
          ports:
            - containerPort: 8080
              protocol: TCP
