quickstart/aspnet-core/k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aspnet-core-redis-6
  name: aspnet-core-redis-6
spec:
  ports:
    - name: 6379-tcp
      port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: aspnet-core-redis-6
